# rfor

./: .gitignore  Cargo.toml  LISENCE  Makefile  README.md  build.rs
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml
conf/: config-cn.yaml  config-redirect.yaml
protos/: common.proto
src/: main.rs  profiler.rs  redirect.rs  rules.rs  settings.rs  socks5.rs  stats.rs  utils.rs
src/protos/: extensions.rs  mod.rs
src/sniffer/: http_parse.rs  mod.rs  quic_parser.rs  tls_parse.rs
src/tproxy/: mod.rs  tproxy_linux.rs  tproxy_others.rs
