[package]
name = "rfor"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
nix = "0.23.1"
futures = "0.3.19"
config = "0.11"
serde = "1"
iprange = "0.6.6"
ipnet = "2.3.1"
url = "2.2.2"
itertools = "0.10.3"
fast-socks5 = { version = "1.0.0-rc.0" }
maxminddb = "0.17"
lazy_static = "1.4.0"
tuple = "0.5.1"
clap = { version = "3.0.14", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
protobuf = "2.27.1"
nom = "7"
tls-parser = "0.11.0"
bytes = "1"
socket2 = "0.5.5"
async-trait = "0.1.77"
byteorder = "1.5.0"
rustls = { version = "0.23.21", default-features = false, features = ["ring"] }
aho-corasick = "1.1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
iptables = "*"
rtnetlink = "0.9.0"

[build-dependencies]
protoc-rust = "2"
protoc-bin-vendored = "3.0.0"
which = "<=4.3"
