[package]
name = "rfor"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["socket", "ioctl", "net", "fs", "user", "feature", "uio", "zerocopy"] }
futures = "0.3"
config = "0.15"
serde = "1"
iprange = "0.6"
ipnet = "2.10"
url = "2.5"
itertools = "0.13"
fast-socks5 = { version = "1.0.0-rc.0" }
maxminddb = "0.24"
tuple = "0.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
protobuf = "3"
nom = "7"
tls-parser = "0.11.0"
bytes = "1"
socket2 = "0.5"
async-trait = "0.1"
byteorder = "1.5"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
aho-corasick = "1.1"
fqdn = "0.5"
fqdn-trie = "0.5"
treebitmap = { package = "ip_network_table-deps-treebitmap", version = "0.5.0" }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
pprof = { version = "0.15.0", features = ["flamegraph"] }

[target.'cfg(target_os = "linux")'.dependencies]
iptables = "0.5"
rtnetlink = "0.14"
netlink-packet-route = "0.19"

[build-dependencies]
protobuf-codegen = "3"
protoc-bin-vendored = "3"
which = "7"
